
include_directories( "../External/glfw/include" )
include_directories( "../External/glew/include" )
include_directories( "../External/SOIL" )
include_directories( "../External/glm" )
include_directories( "Common" )
add_subdirectory( Common )
add_subdirectory( IntroCreateWindow )
add_subdirectory( Shaders )
add_subdirectory( Textures )
add_subdirectory( Transformations )
add_subdirectory( CoordinateSystem )